# HackArena3.0-Cpp-Bot-Template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
template/system/: manifest.toml
template/user/: CMakeLists.txt  README.md
